<resources>
    <string name="app_name">Pal</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">don\'t have an account? sign up</string>
    <string name="forgot_password">forgot password?</string>
    <string name="or_sign_in_with">__________ or sign in with __________</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="entry_slogan">How about adopting a pet?</string>
    <string name="sign_in">Sign-in</string>
    <string name="repeat_password">repeat password</string>
    <string name="name">name</string>
    <string name="phone_number">phone number</string>
    <string name="welcome_to_pal">Welcome to Pal</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="google" translatable="false">Google</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="guest">Guest</string>
    <string name="guest_describe">You should sign-in to make your own favorite list</string>
    <string name="home_title">our dogs for adoption</string>
    <string name="home_description">the pets are waiting for you!</string>
    <string-array name="settings">
        <item>Contact Us</item>
        <item>Terms</item>
        <item>Change password</item>
        <item>Delete User</item>
        <item>Sign out</item>
        <item>Log in</item>
    </string-array>
    <string name="sing_out">  sing-out</string>
    <string name="loading">Loading</string>
    <string name="welcome_dear">Welcome dear</string>
    <string name="general">General</string>
    <string name="test">test</string>
    <string name="years_old">Years old</string>
    <string name="slogen">Adopt, Don\'t Shop!</string>
    <string name="your_favorite_friend">Your favorite friend</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome</string>
    <string name="backicon" translatable="false">backIcon</string>
    <string name="change_password">Change password</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms">Terms</string>
    <string name="weight">Weight:</string>
    <string name="breed">Breed:</string>
    <string name="life_span">Life-span:</string>
    <string name="search_breed">search breed</string>
    <string name="our_angels">our angels</string>
    <string name="more_info">more info...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Age:</string>
    <string name="description">Description:</string>
    <string name="sex">Sex:</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string-array name="parameters">
        <item>Shedding</item>
        <item>pets friendly</item>
        <item>Kids friendly</item>
        <item>Dog size</item>
        <item>Drooling</item>
        <item>Can stay alone</item>
        <item>Barking</item>
        <item>Apartment fit</item>
        <item>Easy to train</item>
        <item>Intelligence</item>
        <item>Playfulness</item>
        <item>Grooming</item>
        <item>Meowing</item>
        <item>General Health</item>
    </string-array>
    <string name="terms_and_conditions_for_pal">Terms and Conditions for Pal</string>
    <string name="Terms_and_Conditions">Terms and Conditions</string>
    <string name="Terms_last_updated">Last updated: February 05, 2023</string>
    <string name="Read_Terms_Carfully_warning">Please read these terms and conditions carefully before using Our Service.</string>
    <string name="Interpretation">Interpretation</string>
    <string name="Definitions">Definitions</string>
    <string name="For_the_purposes_of_these_Terms_and_Conditions">For the purposes of these Terms and Conditions:</string>
    <string name="Terms_Application_Means_Definitions">Application means the software program provided by the Company downloaded by You on any electronic device, named Pal</string>
    <string name="Terms_Application_Store_Means_Definitions">Application Store means the digital distribution service operated and developed by Apple Inc. (Apple App Store) or Google Inc. (Google Play Store) in which the Application has been downloaded.</string>
    <string name="Terms_Affiliate_Means_Definitions_part_one_of_three">Affiliate means an entity that controls, is controlled by or is under common control with a party, where </string>
    <string name="Terms_Affiliate_Means_Definitions_part_two_of_three">control</string>
    <string name="Terms_Affiliate_Means_Definitions_part_three_of_three"> means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.</string>
    <string name="Terms_Country_Means_Definitions">Country refers to: Israel</string>
    <string name="Terms_Company_Means_Definitions_part_one_of_Seven">Company (referred to as either</string>
    <string name="Terms_Company_Means_Definitions_part_two_of_Seven">the Company</string>
    <string name="Terms_Company_Means_Definitions_part_three_of_Seven">We</string>
    <string name="Terms_Company_Means_Definitions_part_four_of_Seven">Us</string>
    <string name="Terms_Company_Means_Definitions_part_five_of_Seven">or</string>
    <string name="Terms_Company_Means_Definitions_part_six_of_Seven">Our</string>
    <string name="Terms_Company_Means_Definitions_part_seven_of_Seven">in this Agreement) refers to Pal.</string>
    <string name="Terms_Device_Means_Definitions">Device means any device that can access the Service such as a computer, a cellphone or a digital tablet.</string>
    <string name="Terms_Service_Means_Definitions">Service refers to the Application.</string>
    <string name="Terms_Terms_And_Conditions_Means_Definitions_part_one_of_Three">Terms and Conditions (also referred as </string>
    <string name="Terms_Terms_And_Conditions_Means_Definitions_part_two_of_Three">Terms</string>
    <string name="Terms_Terms_And_Conditions_Means_Definitions_part_three_of_Three">) mean these Terms and Conditions that form the entire agreement between You and the Company regarding the use of the Service. This Terms and Conditions agreement has been created with the help of the TermsFeed Terms and Conditions Generator.</string>
    <string name="Terms_Third_Party_Means_Definitions">Third-party Social Media Service means any services or content (including data, information, products or services) provided by a third-party that may be displayed, included or made available by the Service.</string>
    <string name="Terms_You_Means_Definitions">You means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.</string>
    <string name="Acknowledgment">Acknowledgment</string>
    <string name="Terms_Acknowledgment_Phrase_one_outOf_Five">These are the Terms and Conditions governing the use of this Service and the agreement that operates between You and the Company. These Terms and Conditions set out the rights and obligations of all users regarding the use of the Service.</string>
    <string name="Terms_Acknowledgment_Phrase_two_outOf_Five">Your access to and use of the Service is conditioned on Your acceptance of and compliance with these Terms and Conditions. These Terms and Conditions apply to all visitors, users and others who access or use the Service.</string>
    <string name="Terms_Acknowledgment_Phrase_three_outOf_Five">By accessing or using the Service You agree to be bound by these Terms and Conditions. If You disagree with any part of these Terms and Conditions then You may not access the Service.</string>
    <string name="Terms_Acknowledgment_Phrase_four_outOf_Five">You represent that you are over the age of 18. The Company does not permit those under 18 to use the Service.</string>
    <string name="Terms_Acknowledgment_Phrase_five_outOf_Five">Your access to and use of the Service is also conditioned on Your acceptance of and compliance with the Privacy Policy of the Company. Our Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your personal information when You use the Application or the Website and tells You about Your privacy rights and how the law protects You. Please read Our Privacy Policy carefully before using Our Service.</string>
    <string name="Links_to_Other_Websites">Links to Other Websites</string>
    <string name="Terms_LinksToOtherWebsites_Phrase_one_outOf_Three">Our Service may contain links to third-party web sites or services that are not owned or controlled by the Company.</string>
    <string name="Terms_LinksToOtherWebsites_Phrase_two_outOf_Three">The Company has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that the Company shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with the use of or reliance on any such content, goods or services available on or through any such web sites or services.</string>
    <string name="Terms_LinksToOtherWebsites_Phrase_three_outOf_Three">We strongly advise You to read the terms and conditions and privacy policies of any third-party web sites or services that You visit.</string>
    <string name="Termination">Termination</string>
    <string name="Terms_Termination_Phrase_one_outOf_Two">We may terminate or suspend Your access immediately, without prior notice or liability, for any reason whatsoever, including without limitation if You breach these Terms and Conditions.</string>
    <string name="Terms_Termination_Phrase_two_outOf_Two">Upon termination, Your right to use the Service will cease immediately.</string>
    <string name="Limitation_of_Liability">Limitation of Liability</string>
    <string name="Terms_LimitationOfLiability_Phrase_one_outOf_Three">Notwithstanding any damages that You might incur, the entire liability of the Company and any of its suppliers under any provision of this Terms and Your exclusive remedy for all of the foregoing shall be limited to the amount actually paid by You through the Service or 100 USD if You haven\'t purchased anything through the Service.</string>
    <string name="Terms_LimitationOfLiability_Phrase_two_outOf_Three">To the maximum extent permitted by applicable law, in no event shall the Company or its suppliers be liable for any special, incidental, indirect, or consequential damages whatsoever (including, but not limited to, damages for loss of profits, loss of data or other information, for business interruption, for personal injury, loss of privacy arising out of or in any way related to the use of or inability to use the Service, third-party software and/or third-party hardware used with the Service, or otherwise in connection with any provision of this Terms), even if the Company or any supplier has been advised of the possibility of such damages and even if the remedy fails of its essential purpose.</string>
    <string name="submit">submit</string>
    <string name="your_message">Your Message</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="or_with">Or With</string>
    <string name="please_enter_your_email_to_reset_you_password">Please enter your email to reset you password</string>
</resources>