<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signin.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/login_ui">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/header"
            android:background="@color/coffee"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="normal"
                android:textColorHint="@color/white"/>

        </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/logo"
        android:id="@+id/login_logo"
        android:layout_gravity="center"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_login"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:background="@drawable/edittextcircle"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:layout_marginTop="0dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_login"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:background="@drawable/edittextcircle"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cornerRadius="20dp"
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:id="@+id/forgot_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/or_sign_in_with"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/google_btn_wrapper"
            android:orientation="vertical"
            android:layout_margin="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/google"
                android:id="@+id/google_btn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:layout_gravity="center"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:id="@+id/facebook_btn_wrapper"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/facebook"
                android:id="@+id/facebook_btn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:layout_gravity="center"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:id="@+id/guest_btn_wrapper"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/guest_mode"
                android:id="@+id/guest_btn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest"
                android:layout_gravity="center"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:id="@+id/signup_btn"
        android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/login_loading">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/paw_anim"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/paw_loading"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>


    </LinearLayout>

</LinearLayout>