<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signin.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/sign_up_ui">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/header"
            android:background="@color/coffee"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="normal"
                android:textColorHint="@color/white"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/logo"
            android:id="@+id/sign_in_logo"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_sign_in"
            android:hint="@string/name"
            android:textColorHint="@color/white"
            android:background="@drawable/edittextcircle"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:layout_marginTop="0dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_sign_in"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:background="@drawable/edittextcircle"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="20dp"
            android:layout_marginTop="0dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_sign_in"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:background="@drawable/edittextcircle"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeat_password_sign_in"
            android:hint="@string/repeat_password"
            android:textColorHint="@color/white"
            android:background="@drawable/edittextcircle"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_sign_in"
            android:hint="@string/phone_number"
            android:textColorHint="@color/white"
            android:background="@drawable/edittextcircle"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="20dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cornerRadius="20dp"
            android:id="@+id/sign_in_btn"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/sign_up_loading">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/paw_anim"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/paw_loading"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>


    </LinearLayout>

</LinearLayout>