<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background2"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.homeScreens.settings.change_password.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/header"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/coffee"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backIcon"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/backicon"
                android:src="@drawable/backicon"
                android:background="@color/coffee"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:layout_marginEnd="31dp"
                android:textSize="28sp"
                android:textStyle="normal"
                android:textColorHint="@color/white"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/logo"
            android:id="@+id/login_logo"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_email_to_reset_you_password"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:padding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_login"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:background="@drawable/edittextcircle"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="20dp"
            android:layout_marginTop="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cornerRadius="20dp"
            android:id="@+id/submit_btn"
            android:text="@string/submit"
            android:layout_gravity="center"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>